openshift-usage/projects/wordpress/wordpress-local/wp-hp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deploy
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      serviceAccountName: my-app-sa
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wp-data
          mountPath: /var/www/html
      volumes:
      - name: wp-data
        persistentVolumeClaim:
          claimName: wordpress-pvc
