openshift-usage/projects/wordpress/wordpress-local/wp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress-route
  namespace: demo-app
spec:
  to:
    kind: Service
    name: wordpress-svc
  port:
    targetPort: 80
  tls:
    termination: edge
